--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,27 +9,18 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres
-      - DB_DATABASE=hospital_db
-    depends_on:
-      - db
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_HOST_CENTRO1=${DB_HOST_CENTRO1}
+      - DB_HOST_CENTRO2=${DB_HOST_CENTRO2}
+      - DB_NAME_CENTRO1=${DB_NAME_CENTRO1}
+      - DB_NAME_CENTRO2=${DB_NAME_CENTRO2}
     volumes:
       - .:/app
       - /app/node_modules
-
-  db:
-    image: postgres:15
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=hospital_db
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data: 
