feat: agregar soporte para el centro médico 3; actualizar controladores y fuentes de datos

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ DB_NAME_CENTRO1=hospital_local
 
 DB_HOST_CENTRO2=35.231.179.109
 DB_NAME_CENTRO2=hospital_local
+
+DB_HOST_CENTRO3=34.148.65.75
+DB_NAME_CENTRO3=hospital_local
+
